--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="google-search">
                 <form  onsubmit="myFunction();return false">
-                    <input type="search" id="gSearch" name="gSearch" autocomplete="off>
+                    <input type="search" id="gSearch" name="gSearch" autocomplete="off">
 
                     <div class="google-search-content">
                         <ul>
